# bcrypt-speed-tests

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: tests.yml
src/bcrypt_speed_tests/: __init__.py  benchmark.py  main.py
tests/: __init__.py  test_benchmark.py  test_cli.py
