[project]
name = "bcrypt-speed-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Grant Ramsay", email = "seapagan@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "bcrypt>=5.0.0",
]

[project.scripts]
bcrypt-speed-tests = "bcrypt_speed_tests:main"

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "poethepoet>=0.37.0",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 80
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.poe.tasks]
ruff = "ruff check ."
format = "ruff format ."
mypy = "mypy src"
