[project]
name = "bcrypt-speed-tests"
version = "0.1.0"
description = "CLI for benchmarking bcrypt cost factors on local hardware."
readme = "README.md"
license = { text = "MIT" }
keywords = ["bcrypt", "benchmark", "cli", "security", "passwords"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Benchmark",
]
authors = [{ name = "Grant Ramsay", email = "seapagan@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["bcrypt>=5.0.0", "typer>=0.12.0"]

[project.urls]
# Homepage = "https://github.com/seapagan/bcrypt-speed-tests"
Repository = "https://github.com/seapagan/bcrypt-speed-tests"
Issues = "https://github.com/seapagan/bcrypt-speed-tests/issues"

[project.scripts]
bcrypt-speed-tests = "bcrypt_speed_tests.main:main"

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy>=1.19.1", "poethepoet>=0.37.0", "ruff>=0.14.10"]

[tool.ruff]
line-length = 80
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.poe.tasks]
ruff = "ruff check ."
format = "ruff format ."
mypy = "mypy src"
